fix some spelling, add anyMachine animation, start to make layout decent on mobile

--- a/website/src/index.scss
+++ b/website/src/index.scss
@@ -35,6 +35,28 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
+html {
+    overflow-x: hidden;
+    max-width: 100vw;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    background: var(--c-background);
+    overflow-x: hidden;
+    width: 100%;
+}
+
+.App {
+    min-width: 320px;
+    max-width: 1200px;
+    margin: 0 auto;
+    min-height: 100vh;
+    max-width: 100vw;
+}
+
 .Collapsible {
     .CollapsibleTitle {
         cursor: pointer;
@@ -157,26 +179,12 @@ section {
     text-decoration: underline;
 }
 
-body {
-    margin: 0;
-    padding: 0;
-    min-height: 100vh;
-    background: var(--c-background);
-    overflow-x: hidden;
-}
-
-.App {
-    min-width: 320px;
-    max-width: 1200px;
-    margin: 0 auto;
-    min-height: 100vh;
-}
-
 .childrenSideBySide {
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 50px;
+
     > * {
         max-width: 50%;
     }
@@ -280,6 +288,9 @@ div.Background {
         }
 
         &.MOWS {
+            max-width: 1000px;
+            margin-left: auto;
+            margin-right: auto;
             display: flex;
             justify-content: space-around;
             align-items: center;
@@ -365,9 +376,58 @@ div.Background {
                 }
                 > div {
                     position: absolute;
-                    > p {
-                        margin: 0px;
-                        max-width: 800px;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    > div {
+                        position: absolute;
+
+                        &.WhyDifferentEasyToUse {
+                            top: 0px;
+                            left: 200px;
+                            width: 332px;
+                        }
+
+                        &.WhyDifferentReliable {
+                            top: 177px;
+                            left: 295px;
+                            width: 395px;
+                        }
+                        &.WhyDifferentSecure {
+                            top: 360px;
+                            left: 200px;
+                            width: 456px;
+                        }
+                        &.WhyDifferentPrivate {
+                            top: 525px;
+                            left: 400px;
+                            width: 422px;
+                        }
+                        &.WhyDifferentOpen {
+                            top: 700px;
+                            left: 295px;
+                            width: 441px;
+                        }
+                        &.WhyDifferentDeveloperFriendly {
+                            top: 866px;
+                            left: 295px;
+                            width: 473px;
+                        }
+                        &.WhyDifferentComprehensive {
+                            top: 1052px;
+                            left: 200px;
+                            width: 550px;
+                        }
+                        &.WhyDifferentScalable {
+                            top: 1230px;
+                            left: 295px;
+                            width: 574px;
+                        }
+
+                        > p {
+                            margin: 0px;
+                            max-width: 800px;
+                        }
                     }
                 }
             }
@@ -381,6 +441,15 @@ div.Background {
                 height: auto;
                 border-radius: 10px;
                 margin: 0px auto;
+            }
+
+            .FourPartsManager {
+                .AnyMachine {
+                    width: 550px;
+                    transform: translate(-100px, -90px) scale(0.5);
+
+                    height: 370px;
+                }
             }
         }
     }
@@ -425,4 +494,84 @@ nav {
 }
 
 @media (prefers-color-scheme: light) {
+}
+
+@media screen and (max-width: 800px) {
+    nav {
+        display: none;
+    }
+
+    section {
+        all: unset;
+        margin-bottom: 100px;
+        margin-top: 50px;
+        .subsection {
+            margin-bottom: 50px;
+            h2 {
+                text-align: center;
+            }
+        }
+    }
+
+    h1 {
+        font-size: 36px !important;
+    }
+    h2 {
+        font-size: 30px !important;
+    }
+    h3 {
+        font-size: 24px !important;
+    }
+    h4 {
+        font-size: 20px !important;
+    }
+    h5 {
+        font-size: 16px !important;
+    }
+    .Project {
+        padding: 0px 20px;
+        max-width: 100%;
+        section {
+            &.Hero {
+                display: block !important;
+                position: relative;
+                .Face {
+                    position: absolute;
+                    z-index: -1 !important;
+                    transform: scale(0.7) translate(-160px, -350px);
+                }
+                .HeroText {
+                    position: absolute;
+                    max-width: 100%;
+
+                    top: 550px !important;
+                }
+            }
+            &.MOWS {
+                flex-wrap: wrap;
+            }
+            &.Why {
+                .ArchitectureProblems {
+                    .picker {
+                        margin: 5px 2.5px;
+                        button {
+                            padding-right: 20px;
+                        }
+                    }
+                    .architectureDisplay {
+                        margin: 0px;
+                        flex-direction: column;
+                        height: auto;
+                        .imageBox {
+                            margin-right: 0px;
+                            height: 300px;
+                            img {
+                                width: 100%;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
